238 - Update swagger spec (#239)
- Add proper categorization of apis.
